[gd_scene load_steps=22 format=3 uid="uid://gclvecuvrsiy"]

[ext_resource type="PackedScene" uid="uid://j2jy5p1ojh58" path="res://addons/gui_manager/nodes/gui/gui/gui.tscn" id="1_tkvea"]
[ext_resource type="PackedScene" uid="uid://dyvkcprf58urk" path="res://addons/gui_manager/nodes/gui/page_router_container/page_router_container.tscn" id="2_dmxuy"]
[ext_resource type="Script" path="res://nodes/gui/quiz_attempt_gui/quiz_attempt_gui.gd" id="2_n2cxh"]
[ext_resource type="Texture2D" uid="uid://crum2o41ed4wp" path="res://assets/buttons/board.png" id="3_1ovje"]
[ext_resource type="Resource" uid="uid://dan5dbax50rp0" path="res://resources/quizzes/test_quiz.tres" id="3_rhkgw"]
[ext_resource type="Script" path="res://scripts/resources/quiz/quiz_attempt.gd" id="5_6v16n"]
[ext_resource type="PackedScene" uid="uid://dggdvwjvdrmkh" path="res://nodes/gui/buttons/medium_wooden_button/medium_wooden_button.tscn" id="5_lmvr6"]
[ext_resource type="LabelSettings" uid="uid://bfng1toxthprb" path="res://resources/label_settings/quiz_attempt_gui_title.tres" id="7_gvve6"]
[ext_resource type="PackedScene" uid="uid://dj23rqjh7m1r3" path="res://addons/gui_manager/nodes/components/page_router/page_router.tscn" id="7_xwpdj"]
[ext_resource type="FontFile" uid="uid://dqdntixoq4bc2" path="res://fonts/Ubuntu-Medium.ttf" id="8_3fasx"]
[ext_resource type="LabelSettings" uid="uid://bcf3wgahko2ws" path="res://resources/label_settings/quiz_problem_page_title.tres" id="8_ymygg"]
[ext_resource type="PackedScene" uid="uid://lallm550hhks" path="res://nodes/gui/quiz_problem_page/quiz_problem_page.tscn" id="10_jfxo7"]
[ext_resource type="LabelSettings" uid="uid://drrmjjqf6oh65" path="res://resources/label_settings/quiz_attempt_gui_button.tres" id="10_ofnbm"]
[ext_resource type="PackedScene" uid="uid://der1edoxrqxln" path="res://nodes/gui_components/set_game_state_on_gui_active/set_game_state_on_gui_active.tscn" id="12_hwelt"]
[ext_resource type="PackedScene" uid="uid://cdhkyjskyryv" path="res://nodes/gui/formatted_label/formatted_label.tscn" id="12_lgx71"]
[ext_resource type="Script" path="res://scripts/resources/string_formatter.gd" id="13_t84n1"]
[ext_resource type="Texture2D" uid="uid://v64bqpwfhlne" path="res://assets/buttons/disabled_button.png" id="16_jq6ql"]

[sub_resource type="Resource" id="Resource_p4emr"]
script = ExtResource("5_6v16n")
quiz = ExtResource("3_rhkgw")
state = 0

[sub_resource type="AtlasTexture" id="AtlasTexture_v16tb"]
atlas = ExtResource("3_1ovje")
region = Rect2(6, 27, 537, 396)

[sub_resource type="Resource" id="Resource_js1b8"]
script = ExtResource("13_t84n1")
format = "Score: %s / %s
"

[sub_resource type="LabelSettings" id="LabelSettings_ffuf1"]
font = ExtResource("8_3fasx")
font_size = 50

[node name="QuizAttemptGUI" node_paths=PackedStringArray("problem_page", "title", "end_title", "description", "score", "wrong", "problem_page_router", "again_page_router", "play_again_button") instance=ExtResource("1_tkvea")]
script = ExtResource("2_n2cxh")
quiz_attempt = SubResource("Resource_p4emr")
problem_page = NodePath("Board/BoardMargin/PageRouterContainer/QuizProblemPage")
title = NodePath("Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Title")
end_title = NodePath("Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Title")
description = NodePath("Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Description")
score = NodePath("Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Score")
wrong = NodePath("Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/Wrong")
problem_page_router = NodePath("Board/BoardMargin/PageRouterContainer/QuizProblemPage/PageRouter")
again_page_router = NodePath("Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Again/PageRouter")
play_again_button = NodePath("Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Again")
inactive_on_ready = false

[node name="Board" type="TextureRect" parent="." index="0"]
layout_mode = 0
offset_left = -525.0
offset_top = -395.0
offset_right = 523.0
offset_bottom = 371.0
texture = SubResource("AtlasTexture_v16tb")
stretch_mode = 5

[node name="BoardMargin" type="MarginContainer" parent="Board" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PageRouterContainer" parent="Board/BoardMargin" index="0" instance=ExtResource("2_dmxuy")]
layout_mode = 2
current_tab = 1

[node name="FirstPage" type="Control" parent="Board/BoardMargin/PageRouterContainer" index="1"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Board/BoardMargin/PageRouterContainer/FirstPage" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Panel" type="PanelContainer" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"QuizAttemptPanel"

[node name="MarginContainer" type="MarginContainer" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/Panel" index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/Panel/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Title" type="Label" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer" index="0"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Title"
label_settings = ExtResource("7_gvve6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Description" type="Label" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer" index="1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Clear this quiz to aqcuire this prize and if you don't complete it, something will happen. "
label_settings = ExtResource("8_ymygg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Play" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource("5_lmvr6")]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer/Play" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
label_settings = ExtResource("10_ofnbm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PageRouter" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer/Play" index="3" node_paths=PackedStringArray("page_router_container", "button") instance=ExtResource("7_xwpdj")]
page_router_container = NodePath("../../../../../..")
route_type = 2
button = NodePath("..")

[node name="ReferenceRect" type="ReferenceRect" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource("5_lmvr6")]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer/Exit" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit
"
label_settings = ExtResource("10_ofnbm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuizProblemPage" parent="Board/BoardMargin/PageRouterContainer" index="2" instance=ExtResource("10_jfxo7")]
layout_mode = 2
metadata/_tab_index = 1

[node name="PageRouter" parent="Board/BoardMargin/PageRouterContainer/QuizProblemPage" index="1" node_paths=PackedStringArray("page_router_container") instance=ExtResource("7_xwpdj")]
page_router_container = NodePath("../..")
route_type = 2

[node name="EndPage" type="Control" parent="Board/BoardMargin/PageRouterContainer" index="3"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="Board/BoardMargin/PageRouterContainer/EndPage" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Panel" type="PanelContainer" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"QuizAttemptPanel"

[node name="MarginContainer" type="MarginContainer" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel" index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Title" type="Label" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer" index="0"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
text = "Title"
label_settings = ExtResource("7_gvve6")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Score" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer" index="1" instance=ExtResource("12_lgx71")]
layout_mode = 2
text = "Score: %s / %s"
label_settings = ExtResource("8_ymygg")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
string_formatter = SubResource("Resource_js1b8")

[node name="Wrong" type="Label" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer" index="2"]
visible = false
layout_mode = 2
text = "Score: no. 2"
label_settings = SubResource("LabelSettings_ffuf1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Again" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer" index="0" node_paths=PackedStringArray("label") instance=ExtResource("5_lmvr6")]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture_disabled = ExtResource("16_jq6ql")
label = NodePath("../../../../../FirstPage/MarginContainer/VBoxContainer/HBoxContainer/Play/Label")

[node name="Label" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Again" index="1"]
text = "Again"

[node name="PageRouter" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Again" index="2" node_paths=PackedStringArray("page_router_container", "button", "go_at") instance=ExtResource("7_xwpdj")]
page_router_container = NodePath("../../../../../..")
button = NodePath("..")
go_at = NodePath("../../../../../../FirstPage")

[node name="ReferenceRect" type="ReferenceRect" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Exit" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer" index="2" node_paths=PackedStringArray("label") instance=ExtResource("5_lmvr6")]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
label = NodePath("../../../../../FirstPage/MarginContainer/VBoxContainer/HBoxContainer/Exit/Label")

[node name="Label" parent="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Exit" index="1"]
text = "Exit"

[node name="SetGameStateOnGUIActive" parent="." index="2" node_paths=PackedStringArray("gui") instance=ExtResource("12_hwelt")]
gui = NodePath("..")
activated_state = "assesment"
deactivated_state = "resume"

[connection signal="pressed" from="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Board/BoardMargin/PageRouterContainer/FirstPage/MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="quiz_completed" from="Board/BoardMargin/PageRouterContainer/QuizProblemPage" to="." method="_on_quiz_problem_page_quiz_completed"]
[connection signal="pressed" from="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]

[editable path="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Again"]
[editable path="Board/BoardMargin/PageRouterContainer/EndPage/MarginContainer/VBoxContainer/HBoxContainer/Exit"]
